--- a/bootstrap dice monster game/diceroll.css
+++ b/bootstrap dice monster game/diceroll.css
@@ -10,3 +10,13 @@
   display: block;
 
 }
+.col-sm{
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+}
+
+img{
+	width: 100;
+	height: 100;
+}
