--- a/bootstrap dice monster game/diceroll.css
+++ b/bootstrap dice monster game/diceroll.css
@@ -1,7 +1,7 @@
 .col-lg{
-  padding: 20px;
-  margin: 20px;
-  border: solid 1px black;
+  padding: 40px;
+  margin: 40px;
+  border: solid 2px black;
   text-align: center;
 }
 #button1{
@@ -11,12 +11,26 @@
 
 }
 .col-sm{
-	margin-left: auto;
-	margin-right: auto;
-	display: block;
+	padding: 20px;
+	margin: 20px;
+	border: solid 1px black;
+	text-align: center;
+
 }
 
-img{
-	width: 100;
-	height: 100;
+#monsterPicture{
+	height: 200px;
+	width: 200px;
+}
+#heroPicture{
+	height: 200px;
+	width: 200px;
+}
+#picture2{
+	height: 150px;
+	width: 150px;
+}
+#picture{
+	height: 150px;
+	width: 150px;
 }
