--- a/bootstrap dice monster game/diceroll.css
+++ b/bootstrap dice monster game/diceroll.css
@@ -17,3 +17,12 @@
 	text-align: center;
 
 }
+
+#monsterPicture{
+	height: 100px;
+	width: 100px;
+}
+#heroPicture{
+	height: 100px;
+	width: 100px;
+}
